# ScaleBack

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  ruff.toml
docs/: DETAILS.md
simplify_sheet/: __init__.py  cli.py  guitar_playability.py  omr.py  piano_playability.py  simplify.py  web.py
src/simplify_sheet/: audio_input.py  clarinet_playability.py  events.py  guitar_tab.py  instruments.py  omr.py  playability.py  simplify.py
src/simplify_sheet/templates/: index.html
tests/: test_pipeline.py  test_timing_windows.py
