[project]
name = "scaleback"
version = "0.1.0"
description = "Simplify sheet music (image/PDF/MusicXML/MIDI/audio) to a chosen skill level for guitar, piano, or clarinet"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "music21>=9.1",
]

[project.optional-dependencies]
web = ["flask>=3.0"]           # local web UI (scaleback-web)
omr = [                        # image/PDF input (or install Audiveris separately)
    "oemer>=0.1.7",
    "onnxruntime>=1.17",       # CPU inference engine (see override below)
]
audio = ["basic-pitch>=0.3"]   # MP3/WAV input

[project.scripts]
scaleback = "simplify_sheet.cli:main"
scaleback-web = "simplify_sheet.web:main"

[dependency-groups]
dev = [
    "cairosvg>=2.9.0",
    "pytest>=8",
    "ruff>=0.8",
    "verovio>=6.2.1",
]

[tool.uv]
# oemer hard-depends on onnxruntime-gpu, whose import fails without CUDA
# libraries; exclude it and run inference on the CPU onnxruntime instead.
override-dependencies = ["onnxruntime-gpu; sys_platform == 'never'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simplify_sheet"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
# the test suite deliberately uses a compact  a; b  fixture style, and
# must import after pytest.importorskip("music21") (E402)
"tests/*" = ["E701", "E702", "E401", "E402", "E731"]
